# enumset

./: .gitignore  README.md  conftest.py  index.html  pytest.ini  requirements-dev.txt  setup.cfg
.github/workflows/: branch.yml  main.yml  tag.yml
cover/: d_6d9f4c7efe416b69___init___py.html  d_6d9f4c7efe416b69_enumset_py.html  d_6d9f4c7efe416b69_flagset_py.html  d_6d9f4c7efe416b69_iface_py.html  d_6d9f4c7efe416b69_version_py.html  index.html  status.json
doc/: enumset.html  index.html  search.js
doc/enumset/: enumset.html  flagset.html  iface.html  version.html
enumset/: __init__.py  enumset.py  flagset.py  iface.py
tests/: test_enumset.py  test_flagset.py  test_serialize.py  test_setcompat.py
