[metadata]
name = enumset
version = attr: enumset.version.VERSION
url = https://github.com/wtnb75/enumset
author = Watanebe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = set of enum.Enum
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:
